--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </nav>
     </div>
     </header>
-    <div class="sidebar-mask"></div> <div class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/" class="nav-link router-link-exact-active router-link-active">首页2</a></div><div class="nav-item"><a href="/rule/" class="nav-link">编程规范</a></div><div class="nav-item"><a href="/ajax/" class="nav-link">Ajax跨域详解</a></div><div class="nav-item"><a href="/webflux/" class="nav-link">WebFlux</a></div><div class="nav-item"><a href="https://github.com/xwjie/VueStudyNote" target="_blank" rel="noopener noreferrer" class="nav-link external">
+    <div class="sidebar-mask"></div> <div class="sidebar">
+    <nav class="nav-links"><div class="nav-item"><a href="/" class="nav-link router-link-exact-active router-link-active">首页2</a></div><div class="nav-item"><a href="/rule/" class="nav-link">编程规范</a></div><div class="nav-item"><a href="/ajax/" class="nav-link">Ajax跨域详解</a></div><div class="nav-item"><a href="/webflux/" class="nav-link">WebFlux</a></div><div class="nav-item"><a href="https://github.com/xwjie/VueStudyNote" target="_blank" rel="noopener noreferrer" class="nav-link external">
   Vue2
   <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg></a></div><div class="nav-item"><a href="/note/" class="nav-link">零星笔记</a></div><div class="nav-item"><a href="/spring/" class="nav-link">Spring笔记</a></div><div class="nav-item"><a href="/me.html" class="nav-link">联系我</a></div> <a href="https://github.com/xwjie" target="_blank" rel="noopener noreferrer" class="repo-link">
     GitHub2
