--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div class="sidebar-button">
     <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/" class="home-link router-link-exact-active router-link-active"><!----> <span class="site-name">forms技术分享</span></a> <div class="links" style="max-width:nullpx;"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value=""> <!----></div> 
     <nav class="nav-links can-hide">
-    <div class="nav-item"><a href="/" class="nav-link router-link-exact-active router-link-active">首页1</a></div><div class="nav-item"><a href="/rule/" class="nav-link">Spring注解</a></div>
+    <div class="nav-item"><a href="/" class="nav-link router-link-exact-active router-link-active">首页</a></div>
+    <div class="nav-item"><a href="/rule/" class="nav-link">Spring注解</a></div>
     <div class="nav-item"><a href="/ajax/" class="nav-link">Ajax跨域详解</a></div>
     <div class="nav-item"><a href="/webflux/" class="nav-link">WebFlux</a></div>
     <div class="nav-item"><a href="/note/" class="nav-link">零星笔记</a></div>
